[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "text-processing", "value-formatting"]
description = "A tool for doing record analysis and transformation"
documentation = "https://github.com/dflemstr/rq/blob/master/README.md"
homepage = "https://github.com/dflemstr/rq"
keywords = ["command-line-tool", "cli", "javascript", "record", "query"]
license = "Apache-2.0"
name = "record-query"
readme = "README.md"
repository = "https://github.com/dflemstr/rq"
version = "1.0.4"
edition = "2024"

[badges]

[badges.travis-ci]
branch = "master"
repository = "dflemstr/rq"

[build-dependencies]
built = "0.8.0"
env_logger = "0.11.8"
regex = "1.11.1"
vergen = "7.5.1"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
csv = "1.3.1"
directories = "6.0.0"
dtoa = "1.0.10"
itoa = "1.0.15"
env_logger = "0.11.8"
glob = "0.3.2"
log = "0.4.27"
nix = "0.30.1"
ordered-float = "5.0.0"
pest = "2.8.0"
protobuf = "2.28.0"
rmp = "0.8.14"
rmpv = "1.3.0"
serde = "1.0.219"
serde-hjson = "1.1.0"
serde-protobuf = "0.8.2"
serde-smile = "0.2.2"
serde_cbor = "0.11.2"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
structopt = "0.3.26"
yaml-rust = "0.4.5"
thiserror = "2.0.12"

[dependencies.avro-rs]
version = "0.13.0"
features = ["snappy"]

[dependencies.toml]
version = "0.8.22"
features = ["preserve_order"]

[profile.release]
lto = true
codegen-units = 1
